--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
-    "embla-carousel-react": "8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.3.3",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
