관리자 페이지 생성

--- a/env.example
+++ b/env.example
@@ -1,3 +1,7 @@
 # Backend API URLs
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
-NEXT_PUBLIC_API_BASE_URL_PROD=https://your-backend-domain.com 
+NEXT_PUBLIC_API_BASE_URL_PROD=https://your-backend-domain.com
+
+# Admin API Configuration
+ADMIN_API_KEY=your-admin-api-key-here
+BACKEND_API_URL=http://localhost:8000 
